--- a/src/paginas/Sentiment.css
+++ b/src/paginas/Sentiment.css
@@ -16,6 +16,13 @@
     margin-top: 50px;
   }
 
+  #reactgooglegraph-3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+  }
+
   .container-indicadores{
     margin-top: 20px;
   }
