--- a/src/App.css
+++ b/src/App.css
@@ -77,16 +77,16 @@ hr {
 /* RIGHT CONTAINERS */
 
 .right-container {
+  background-color: #fff;
+  border-radius: 40px;
   display: flex;
   flex-wrap: wrap;
-  justify-content:center;
-  width: 60vw;
   height: 70vh;
-  background-color: #ffffff;
-  border-radius: 40px;
+  justify-content: center;
   min-width: 400px;
-  overflow:scroll;
-  padding: 50px 10px 0px, 10px;
+  overflow: scroll;
+  padding: 50px 10px 0,10px;
+  width: 60vw;
 }
 
 ::-webkit-scrollbar {
