--- a/src/paginas/Trends.css
+++ b/src/paginas/Trends.css
@@ -1,26 +1,24 @@
-
-input{
-    background-color: red;
-    width: 200px;
-    height: 40px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 600;
-    border:none;
+input {
+  background-color: red;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
 }
 
-input:focus{
-    outline: none;
+input:focus {
+  outline: none;
 }
 
-select:focus{
-    outline: none;
+select:focus {
+  outline: none;
 }
 
-.right-container-trends{
-    
+.right-container-trends {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,6 +28,11 @@ select:focus{
   border-radius: 40px;
   min-width: 400px;
   overflow-y: scroll;
-
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
+.divider2{
+    margin: 40px;
+}
