--- a/src/paginas/Demographics.css
+++ b/src/paginas/Demographics.css
@@ -43,3 +43,11 @@
     width: 400px;
   }
   
+
+  #ColumnChart > div > div:nth-child(1) > div > svg > rect{
+    fill:transparent;
+  }
+
+  #ColumnChart{
+    margin-top: -110px;
+  }
