--- a/src/paginas/Sentiment.css
+++ b/src/paginas/Sentiment.css
@@ -18,3 +18,9 @@
   .divider-sentiment{
     height: 70px;
   }
+
+  .newtons-cradle-rc{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
