--- a/src/paginas/Demographics.css
+++ b/src/paginas/Demographics.css
@@ -51,3 +51,9 @@
   #ColumnChart{
     margin-top: -110px;
   }
+
+  .leap-frog-rc{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
