--- a/src/paginas/Metrics.css
+++ b/src/paginas/Metrics.css
@@ -1,3 +1,10 @@
-iframe{
-    padding: 40px;
+.followers-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 100px;
+    width: 100%;
+    height: 300px;
+
 }
