--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -8,43 +8,50 @@
   cursor: pointer;
 }
 
-.container{
-    width: 100vw;
-    height:100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: -100px;
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -100px;
 }
 
-.formContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    background-color: white;
-    height: 550px;
-    width: 450px;
-    border-radius: 40px;
-    box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.584);
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: 550px;
+  width: 450px;
+  border-radius: 40px;
+  box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.584);
 }
 
-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-p{
-    text-align: center;
+p {
+  text-align: center;
 }
 
-h1{
-    text-align: center;
+h1 {
+  text-align: center;
 }
 
-input{
-    background-color: red;
-    width: 350px;
+input {
+  background-color: red;
+  width: 350px;
+  height: 40px;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
 }
