--- a/src/paginas/Metrics.css
+++ b/src/paginas/Metrics.css
@@ -3,8 +3,25 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    column-gap: 100px;
+    column-gap: 20px;
     width: 100%;
-    height: 300px;
+    height: 200px;
+    margin-bottom: 50px;
+
+}
+
+.all-metrics-container{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.social-network-title{
+    background-color: blue;
+    color: white;
+    width: 100%;
+    padding: 20px 10px;
+    border-radius: 20px;
+    margin-top: 40px;
 
 }
