--- a/src/paginas/Metrics.css
+++ b/src/paginas/Metrics.css
@@ -25,3 +25,16 @@
     margin-top: 40px;
 
 }
+
+.ig-metrics-counters{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    column-gap: 30px;
+    row-gap: 30px;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 50px;
+}
