--- a/src/paginas/Metrics.module.css
+++ b/src/paginas/Metrics.module.css
@@ -1,32 +1,34 @@
-.followers-container{
+.followersContainer{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     column-gap: 20px;
+    row-gap: 50px;
     width: 100%;
-    height: 200px;
     margin-bottom: 50px;
 
 }
 
-.all-metrics-container{
+.allMetricsContainer{
+    width: 100%;
     display:flex;
     flex-direction: column;
     align-items: center;
 }
 
-.social-network-title{
+.socialNetworkTitle{
     background-color: blue;
     color: white;
-    width: 100%;
+    width: 90%;
     padding: 20px 10px;
     border-radius: 20px;
     margin-top: 40px;
 
 }
 
-.ig-metrics-counters{
+.igCounters{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -34,7 +36,6 @@
     justify-content: center;
     column-gap: 30px;
     row-gap: 30px;
-    width: 100%;
-    height: 200px;
     margin-bottom: 50px;
 }
+
