--- a/src/paginas/TopPosts.css
+++ b/src/paginas/TopPosts.css
@@ -12,3 +12,19 @@
     justify-content: center;
     align-items: center;
 }
+
+.left-container{
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+}
+
+.facebook-toggle{
+  font-family: Poppins,Arial, Helvetica, sans-serif;
+}
+.instagram-toggle{
+  font-family: Poppins,Arial, Helvetica, sans-serif;
+}
+
+.fetch-button{
+  font-family: 'Poppins',Arial, Helvetica, sans-serif;
+  margin-top: 30px;
+}
